feat: universal currency conversion (selling rates) + i18n translations for all pages
- Switch FX rates from BNR average to selling rates (~1.5-2% higher)
- Fix currency conversion in PropertyCard, PropertyDetails, Tours, TourDetails, Transport, MyBookings
- All prices now convert to user's preferred currency (auto-detected by IP)
- Add translation keys for tours, tourDetails, transport, checkout, tripCartPage sections
- Translate Tours, TourDetails, Transport pages (headings, labels, buttons, empty states)
- Expand common translation keys (perPerson, perDay, perWeek, perMonth, bookNow, addToCart, etc.)
- All 5 locales updated: English, French, Kinyarwanda, Swahili, Chinese

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -47,10 +47,42 @@
     "couldNotLoadProperties": "Couldn’t load properties right now.",
     "noPublishedProperties": "No published properties yet.",
     "perNight": "/ night",
+    "perPerson": "/ person",
+    "perDay": "/ day",
+    "perWeek": "/ week",
+    "perMonth": "/ month",
     "previous": "Previous",
     "next": "Next",
     "showing": "Showing",
-    "of": "of"
+    "of": "of",
+    "back": "Back",
+    "book": "Book",
+    "bookNow": "Book Now",
+    "addToCart": "Add to Cart",
+    "addToTripCart": "Add to Trip Cart",
+    "addedToCart": "Added to Trip Cart",
+    "verified": "Verified",
+    "day": "day",
+    "days": "days",
+    "night": "night",
+    "nights": "nights",
+    "guest": "guest",
+    "guests_count": "guests",
+    "seats": "seats",
+    "reviews": "reviews",
+    "total": "Total",
+    "subtotal": "Subtotal",
+    "basePrice": "Base price",
+    "serviceFees": "Service fees",
+    "apply": "Apply",
+    "remove": "Remove",
+    "edit": "Edit",
+    "view": "View",
+    "download": "Download",
+    "save": "Save",
+    "processing": "Processing...",
+    "securePayment": "Secure payment",
+    "secureCheckout": "Secure checkout"
   },
   "favorites": {
     "title": "Saved",
@@ -218,5 +250,178 @@
     "privacyBody": "Our privacy information will be published here soon.",
     "cookiesBody": "Cookie information and preferences will be available here soon.",
     "termsBody": "Terms and conditions will be published here soon."
+  },
+  "tours": {
+    "title": "Tours & Experiences",
+    "subtitle": "Discover the beauty of Rwanda",
+    "searchPlaceholder": "Search tours by name or location...",
+    "loading": "Loading tours...",
+    "errorLoading": "Could not load tours right now.",
+    "noResults": "No tours found matching your search.",
+    "categories": {
+      "all": "All",
+      "nature": "Nature",
+      "adventure": "Adventure",
+      "cultural": "Cultural",
+      "wildlife": "Wildlife",
+      "historical": "Historical"
+    },
+    "duration": {
+      "any": "Any Duration",
+      "halfDay": "Half Day",
+      "fullDay": "Full Day",
+      "multiDay": "Multi-Day"
+    },
+    "badge": {
+      "package": "Package",
+      "tour": "Tour"
+    },
+    "toast": {
+      "addedTitle": "Added to Trip Cart",
+      "packageAdded": "Package added to your cart.",
+      "tourAdded": "Tour added to your cart."
+    }
+  },
+  "tourDetails": {
+    "notFound": "Tour Not Found",
+    "backToTours": "Back to Tours",
+    "locationNotSpecified": "Location not specified",
+    "upToGuests": "Up to {{count}} guests",
+    "aboutTour": "About this tour",
+    "noDescription": "No description available",
+    "dailyItinerary": "Daily Itinerary",
+    "whatToExpect": "What to Expect",
+    "whatsIncluded": "✓ What's Included",
+    "whatsNotIncluded": "✗ What's Not Included",
+    "importantInfo": "Important Information",
+    "meetingPoint": "Meeting Point",
+    "whatToBring": "What to Bring",
+    "detailedItinerary": "Detailed Itinerary",
+    "tourItinerary": "Tour Itinerary",
+    "pdfDocument": "PDF Document",
+    "noItinerary": "No detailed itinerary document is currently available for this tour.",
+    "priceForTour": "Price for the tour",
+    "singlePerson": "Single person",
+    "groupOf": "Group of {{count}} people",
+    "perPerson": "per person",
+    "yourTourGuide": "Your Tour Guide",
+    "guideIncomplete": "Guide Profile Incomplete",
+    "guideIncompleteDesc": "The tour guide's profile information is incomplete.",
+    "yearsExperience": "years of experience",
+    "speaks": "Speaks",
+    "contactAfterBooking": "Contact details available after booking confirmation",
+    "cancellationTitle": "Cancellation & Refund Policy"
+  },
+  "transport": {
+    "title": "Transportation Services",
+    "subtitle": "Get around Rwanda with ease",
+    "searchPlaceholder": "Search routes or destinations...",
+    "loading": "Loading transport services...",
+    "showAll": "Show all services",
+    "categories": {
+      "airportTransfer": "Airport Transfer",
+      "airportDesc": "Pickup & dropoff at airports",
+      "intracity": "Intracity Ride",
+      "intracityDesc": "Rides within a city",
+      "intercity": "Intercity Ride",
+      "intercityDesc": "Travel between cities",
+      "carRental": "Car Rentals",
+      "carRentalDesc": "Rent vehicles with or without driver"
+    },
+    "vehicles": {
+      "all": "All Vehicles",
+      "sedan": "Sedan",
+      "suv": "SUV",
+      "van": "Van",
+      "fourByFour": "4x4",
+      "luxury": "Luxury"
+    },
+    "airportTransfers": "Airport Transfers",
+    "fromAirport": "From Airport",
+    "toAirport": "To Airport",
+    "noAirportRoutes": "No airport transfer routes available yet",
+    "intracityRides": "Intracity Rides",
+    "noIntracityServices": "No intracity ride services available yet",
+    "intercityRides": "Intercity Rides",
+    "noIntercityRoutes": "No intercity routes available yet",
+    "bookRide": "Book Ride",
+    "couldNotLoadVehicles": "Could not load vehicles.",
+    "noRentalVehicles": "No rental vehicles available yet",
+    "driverIncluded": "✓ Driver included",
+    "selfDrive": "Self drive",
+    "rentNow": "Rent Now",
+    "moreFeatures": "+{{count}} more"
+  },
+  "checkout": {
+    "title": "Checkout",
+    "backToCart": "Back to cart",
+    "emptyCart": "Your cart is empty",
+    "emptyCartDesc": "Add some items to your cart before checking out.",
+    "backToTripCart": "Back to Trip Cart",
+    "steps": {
+      "details": "Details",
+      "payment": "Payment",
+      "confirm": "Confirm"
+    },
+    "contact": {
+      "title": "Contact Details",
+      "subtitle": "We'll use this to confirm your booking",
+      "quickPay": "Quick Pay",
+      "fullName": "Full Name *",
+      "email": "Email *",
+      "specialRequests": "Special Requests (Optional)",
+      "specialRequestsPlaceholder": "Any special requests or notes...",
+      "continue": "Continue to Payment"
+    },
+    "payment": {
+      "title": "Choose Payment Method",
+      "subtitle": "Select your mobile money provider",
+      "card": "Card",
+      "cardDesc": "Visa, Mastercard",
+      "bankTransfer": "Bank Transfer",
+      "bankTransferDesc": "Direct Transfer",
+      "phoneNumber": "Phone Number *",
+      "howItWorks": "How it works",
+      "reviewBooking": "Review Booking"
+    },
+    "review": {
+      "title": "Review & Confirm",
+      "subtitle": "Please review your order before payment",
+      "contactDetails": "Contact Details",
+      "paymentMethod": "Payment Method",
+      "beforeProceed": "Before you proceed",
+      "agreeTerms": "I have read and agree to the",
+      "termsConditions": "Terms and Conditions",
+      "privacyPolicy": "Privacy Policy",
+      "cancellationPolicy": "Cancellation & Refund Policy",
+      "acceptAll": "Please accept all terms and policies to proceed with payment",
+      "securedEncrypted": "Secured • Encrypted payment",
+      "pay": "Pay {{amount}}",
+      "confirmBooking": "Confirm Booking"
+    },
+    "summary": {
+      "title": "Booking Summary",
+      "discountCode": "Discount Code",
+      "enterCode": "Enter code",
+      "stayDiscount": "Stay discount",
+      "promo": "Promo ({{code}})",
+      "instantConfirmation": "Instant booking confirmation"
+    }
+  },
+  "tripCartPage": {
+    "title": "Your Trip",
+    "emptyTitle": "Your cart is empty",
+    "emptyDesc": "Start exploring our amazing tours, stays, and transport options to plan your perfect trip.",
+    "exploreTours": "Explore Tours",
+    "findStays": "Find Stays",
+    "bookTransport": "Book Transport",
+    "bookingSummary": "Booking Summary",
+    "proceedPayment": "Proceed to Payment",
+    "clearCart": "Clear Cart",
+    "editDates": "Edit Booking Dates",
+    "addDates": "Add dates to continue",
+    "saveDates": "Save Dates",
+    "checkIn": "Check-in",
+    "checkOut": "Check-out"
   }
 }
