--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -47,10 +47,42 @@
     "couldNotLoadProperties": "Impossible de charger les hébergements pour le moment.",
     "noPublishedProperties": "Aucun hébergement publié pour le moment.",
     "perNight": "/ nuit",
+    "perPerson": "/ personne",
+    "perDay": "/ jour",
+    "perWeek": "/ semaine",
+    "perMonth": "/ mois",
     "previous": "Précédent",
     "next": "Suivant",
     "showing": "Affichage",
-    "of": "sur"
+    "of": "sur",
+    "back": "Retour",
+    "book": "Réserver",
+    "bookNow": "Réserver maintenant",
+    "addToCart": "Ajouter au panier",
+    "addToTripCart": "Ajouter au panier voyage",
+    "addedToCart": "Ajouté au panier voyage",
+    "verified": "Vérifié",
+    "day": "jour",
+    "days": "jours",
+    "night": "nuit",
+    "nights": "nuits",
+    "guest": "voyageur",
+    "guests_count": "voyageurs",
+    "seats": "places",
+    "reviews": "avis",
+    "total": "Total",
+    "subtotal": "Sous-total",
+    "basePrice": "Prix de base",
+    "serviceFees": "Frais de service",
+    "apply": "Appliquer",
+    "remove": "Retirer",
+    "edit": "Modifier",
+    "view": "Voir",
+    "download": "Télécharger",
+    "save": "Enregistrer",
+    "processing": "Traitement...",
+    "securePayment": "Paiement sécurisé",
+    "secureCheckout": "Paiement sécurisé"
   },
   "favorites": {
     "title": "Enregistrés",
@@ -215,6 +247,98 @@
     "safetyBody": "Les conseils et règles de sécurité seront disponibles bientôt.",
     "privacyBody": "Notre politique de confidentialité sera publiée bientôt.",
     "cookiesBody": "Les informations sur les cookies seront disponibles bientôt.",
-    "termsBody": "Les conditions d’utilisation seront publiées bientôt."
-  }
+    "termsBody": "Les conditions d’utilisation seront publiées bientôt."  },
+  "tours": {
+    "title": "Circuits & Expériences",
+    "subtitle": "Découvrez la beauté du Rwanda",
+    "searchPlaceholder": "Rechercher par nom ou lieu...",
+    "loading": "Chargement des circuits...",
+    "errorLoading": "Impossible de charger les circuits pour le moment.",
+    "noResults": "Aucun circuit ne correspond à votre recherche.",
+    "categories": { "all": "Tous", "nature": "Nature", "adventure": "Aventure", "cultural": "Culturel", "wildlife": "Faune", "historical": "Historique" },
+    "duration": { "any": "Toute durée", "halfDay": "Demi-journée", "fullDay": "Journée complète", "multiDay": "Plusieurs jours" },
+    "badge": { "package": "Forfait", "tour": "Circuit" },
+    "toast": { "addedTitle": "Ajouté au panier voyage", "packageAdded": "Forfait ajouté à votre panier.", "tourAdded": "Circuit ajouté à votre panier." }
+  },
+  "tourDetails": {
+    "notFound": "Circuit non trouvé",
+    "backToTours": "Retour aux circuits",
+    "locationNotSpecified": "Lieu non précisé",
+    "upToGuests": "Jusqu'à {{count}} invités",
+    "aboutTour": "À propos de ce circuit",
+    "noDescription": "Aucune description disponible",
+    "dailyItinerary": "Itinéraire quotidien",
+    "whatToExpect": "À quoi s'attendre",
+    "whatsIncluded": "✓ Ce qui est inclus",
+    "whatsNotIncluded": "✗ Ce qui n'est pas inclus",
+    "importantInfo": "Informations importantes",
+    "meetingPoint": "Point de rencontre",
+    "whatToBring": "Quoi apporter",
+    "detailedItinerary": "Itinéraire détaillé",
+    "tourItinerary": "Itinéraire du circuit",
+    "pdfDocument": "Document PDF",
+    "noItinerary": "Aucun itinéraire détaillé n'est actuellement disponible pour ce circuit.",
+    "priceForTour": "Prix du circuit",
+    "singlePerson": "Personne seule",
+    "groupOf": "Groupe de {{count}} personnes",
+    "perPerson": "par personne",
+    "yourTourGuide": "Votre guide",
+    "guideIncomplete": "Profil du guide incomplet",
+    "guideIncompleteDesc": "Le profil du guide est incomplet.",
+    "yearsExperience": "années d'expérience",
+    "speaks": "Parle",
+    "contactAfterBooking": "Coordonnées disponibles après confirmation",
+    "cancellationTitle": "Politique d'annulation et de remboursement"
+  },
+  "transport": {
+    "title": "Services de transport",
+    "subtitle": "Déplacez-vous au Rwanda facilement",
+    "searchPlaceholder": "Rechercher des itinéraires ou destinations...",
+    "loading": "Chargement des services de transport...",
+    "showAll": "Afficher tous les services",
+    "categories": { "airportTransfer": "Transfert aéroport", "airportDesc": "Prise en charge et dépôt à l'aéroport", "intracity": "Trajet urbain", "intracityDesc": "Déplacements en ville", "intercity": "Trajet interurbain", "intercityDesc": "Voyager entre les villes", "carRental": "Location de voiture", "carRentalDesc": "Louez avec ou sans chauffeur" },
+    "vehicles": { "all": "Tous les véhicules", "sedan": "Berline", "suv": "SUV", "van": "Fourgon", "fourByFour": "4x4", "luxury": "Luxe" },
+    "airportTransfers": "Transferts aéroport",
+    "fromAirport": "Depuis l'aéroport",
+    "toAirport": "Vers l'aéroport",
+    "noAirportRoutes": "Pas encore de transferts aéroport disponibles",
+    "intracityRides": "Trajets urbains",
+    "noIntracityServices": "Pas encore de services de trajet urbain",
+    "intercityRides": "Trajets interurbains",
+    "noIntercityRoutes": "Pas encore de routes interurbaines",
+    "bookRide": "Réserver",
+    "couldNotLoadVehicles": "Impossible de charger les véhicules.",
+    "noRentalVehicles": "Pas encore de véhicules de location",
+    "driverIncluded": "✓ Chauffeur inclus",
+    "selfDrive": "Auto-conduite",
+    "rentNow": "Louer maintenant",
+    "moreFeatures": "+{{count}} de plus"
+  },
+  "checkout": {
+    "title": "Paiement",
+    "backToCart": "Retour au panier",
+    "emptyCart": "Votre panier est vide",
+    "emptyCartDesc": "Ajoutez des éléments à votre panier avant de payer.",
+    "backToTripCart": "Retour au panier voyage",
+    "steps": { "details": "Détails", "payment": "Paiement", "confirm": "Confirmer" },
+    "contact": { "title": "Coordonnées", "subtitle": "Nous les utiliserons pour confirmer votre réservation", "quickPay": "Paiement rapide", "fullName": "Nom complet *", "email": "E-mail *", "specialRequests": "Demandes spéciales (Optionnel)", "specialRequestsPlaceholder": "Demandes ou remarques spéciales...", "continue": "Continuer vers le paiement" },
+    "payment": { "title": "Choisir le mode de paiement", "subtitle": "Sélectionnez votre fournisseur de mobile money", "card": "Carte", "cardDesc": "Visa, Mastercard", "bankTransfer": "Virement bancaire", "bankTransferDesc": "Transfert direct", "phoneNumber": "Numéro de téléphone *", "howItWorks": "Comment ça marche", "reviewBooking": "Vérifier la réservation" },
+    "review": { "title": "Vérification et confirmation", "subtitle": "Vérifiez votre commande avant le paiement", "contactDetails": "Coordonnées", "paymentMethod": "Mode de paiement", "beforeProceed": "Avant de continuer", "agreeTerms": "J'ai lu et j'accepte les", "termsConditions": "Conditions générales", "privacyPolicy": "Politique de confidentialité", "cancellationPolicy": "Politique d'annulation et de remboursement", "acceptAll": "Veuillez accepter toutes les conditions pour continuer", "securedEncrypted": "Sécurisé • Paiement chiffré", "pay": "Payer {{amount}}", "confirmBooking": "Confirmer la réservation" },
+    "summary": { "title": "Résumé de la réservation", "discountCode": "Code de réduction", "enterCode": "Entrez le code", "stayDiscount": "Réduction séjour", "promo": "Promo ({{code}})", "instantConfirmation": "Confirmation instantanée" }
+  },
+  "tripCartPage": {
+    "title": "Votre voyage",
+    "emptyTitle": "Votre panier est vide",
+    "emptyDesc": "Explorez nos circuits, hébergements et transports pour planifier votre voyage.",
+    "exploreTours": "Explorer les circuits",
+    "findStays": "Trouver un hébergement",
+    "bookTransport": "Réserver un transport",
+    "bookingSummary": "Résumé de la réservation",
+    "proceedPayment": "Passer au paiement",
+    "clearCart": "Vider le panier",
+    "editDates": "Modifier les dates",
+    "addDates": "Ajoutez des dates pour continuer",
+    "saveDates": "Enregistrer les dates",
+    "checkIn": "Arrivée",
+    "checkOut": "Départ"  }
 }
