--- a/src/i18n/locales/rw.json
+++ b/src/i18n/locales/rw.json
@@ -47,10 +47,42 @@
     "couldNotLoadProperties": "Ntitwabashije kubona amacumbi ubu.",
     "noPublishedProperties": "Nta macumbi yatangajwe ubu.",
     "perNight": "/ ijoro",
+    "perPerson": "/ umuntu",
+    "perDay": "/ umunsi",
+    "perWeek": "/ icyumweru",
+    "perMonth": "/ ukwezi",
     "previous": "Ibyo mbere",
     "next": "Ibikurikira",
     "showing": "Kwerekana",
-    "of": "muri"
+    "of": "muri",
+    "back": "Gusubira",
+    "book": "Gufata",
+    "bookNow": "Fata ubu",
+    "addToCart": "Ongeramo mu gatebo",
+    "addToTripCart": "Shyira mu gatebo k'urugendo",
+    "addedToCart": "Byashyizwe mu gatebo k'urugendo",
+    "verified": "Byemejwe",
+    "day": "umunsi",
+    "days": "iminsi",
+    "night": "ijoro",
+    "nights": "amajoro",
+    "guest": "umushyitsi",
+    "guests_count": "abashyitsi",
+    "seats": "intebe",
+    "reviews": "ibitekerezo",
+    "total": "Igiteranyo",
+    "subtotal": "Igiteranyo gito",
+    "basePrice": "Igiciro cy'ibanze",
+    "serviceFees": "Amafaranga y'ibikorwa",
+    "apply": "Shyira mu bikorwa",
+    "remove": "Kuraho",
+    "edit": "Hindura",
+    "view": "Reba",
+    "download": "Manura",
+    "save": "Bika",
+    "processing": "Birimo gukorwa...",
+    "securePayment": "Kwishyura kw'umutekano",
+    "secureCheckout": "Kwishyura kw'umutekano"
   },
   "favorites": {
     "title": "Ibyabitswe",
@@ -215,6 +247,98 @@
     "safetyBody": "Inama n’amabwiriza by’umutekano bizashyirwaho vuba.",
     "privacyBody": "Amakuru ajyanye n’ibanga azashyirwaho vuba.",
     "cookiesBody": "Amakuru ajyanye na cookies azashyirwaho vuba.",
-    "termsBody": "Amategeko n’amabwiriza bizashyirwaho vuba."
-  }
+    "termsBody": "Amategeko n’amabwiriza bizashyirwaho vuba."  },
+  "tours": {
+    "title": "Ingendo & Ibikorwa",
+    "subtitle": "Menya ubwiza bw'u Rwanda",
+    "searchPlaceholder": "Shakisha ingendo ku izina cyangwa ahantu...",
+    "loading": "Turimo gupakira ingendo...",
+    "errorLoading": "Ntitwabashije kubona ingendo ubu.",
+    "noResults": "Nta ngendo zihuye n'ibyo ushaka.",
+    "categories": { "all": "Byose", "nature": "Kamere", "adventure": "Gukunda", "cultural": "Umuco", "wildlife": "Inyamaswa", "historical": "Amateka" },
+    "duration": { "any": "Igihe icyo ari cyo cyose", "halfDay": "Igice cy'umunsi", "fullDay": "Umunsi wose", "multiDay": "Iminsi myinshi" },
+    "badge": { "package": "Paki", "tour": "Urugendo" },
+    "toast": { "addedTitle": "Byashyizwe mu gatebo", "packageAdded": "Paki yashyizwe mu gatebo.", "tourAdded": "Urugendo rwashyizwe mu gatebo." }
+  },
+  "tourDetails": {
+    "notFound": "Urugendo ntirubonetse",
+    "backToTours": "Subira ku ngendo",
+    "locationNotSpecified": "Ahantu ntahabitswe",
+    "upToGuests": "Kugeza ku bashyitsi {{count}}",
+    "aboutTour": "Ibyerekeye uru rugendo",
+    "noDescription": "Nta bisobanuro bihari",
+    "dailyItinerary": "Gahunda ya buri munsi",
+    "whatToExpect": "Ibyo ukwitega",
+    "whatsIncluded": "✓ Ibirimo",
+    "whatsNotIncluded": "✗ Ibidarimo",
+    "importantInfo": "Amakuru y'ingenzi",
+    "meetingPoint": "Aho muhurira",
+    "whatToBring": "Ibyo kuzana",
+    "detailedItinerary": "Gahunda yihariye",
+    "tourItinerary": "Gahunda y'urugendo",
+    "pdfDocument": "Inyandiko PDF",
+    "noItinerary": "Nta gahunda yihariye ihari ubu ku rugendo.",
+    "priceForTour": "Igiciro cy'urugendo",
+    "singlePerson": "Umuntu umwe",
+    "groupOf": "Itsinda ry'abantu {{count}}",
+    "perPerson": "ku muntu",
+    "yourTourGuide": "Umuyobozi wawe",
+    "guideIncomplete": "Umwirondoro w'umuyobozi ntuzuye",
+    "guideIncompleteDesc": "Amakuru y'umuyobozi ntayuzuye.",
+    "yearsExperience": "imyaka y'uburambe",
+    "speaks": "Avuga",
+    "contactAfterBooking": "Amakuru yo kumugeraho azaboneka nyuma yo kwemeza",
+    "cancellationTitle": "Politiki yo guhagarika no gusubizwa amafaranga"
+  },
+  "transport": {
+    "title": "Serivisi z'ubwikorezi",
+    "subtitle": "Igendere mu Rwanda nta ngorane",
+    "searchPlaceholder": "Shakisha inzira cyangwa aho ujya...",
+    "loading": "Turimo gupakira serivisi z'ubwikorezi...",
+    "showAll": "Erekana serivisi zose",
+    "categories": { "airportTransfer": "Kujyana ku kibuga", "airportDesc": "Gufata no gutaha ku kibuga", "intracity": "Urugendo mu mujyi", "intracityDesc": "Gutwara mu mujyi", "intercity": "Urugendo hagati y'imijyi", "intercityDesc": "Kugenda hagati y'imijyi", "carRental": "Gukodesha imodoka", "carRentalDesc": "Kodesha hamwe cyangwa udafite umushoferi" },
+    "vehicles": { "all": "Imodoka zose", "sedan": "Sedan", "suv": "SUV", "van": "Van", "fourByFour": "4x4", "luxury": "Imodoka nziza" },
+    "airportTransfers": "Kujyana ku kibuga",
+    "fromAirport": "Kuva ku kibuga",
+    "toAirport": "Kujya ku kibuga",
+    "noAirportRoutes": "Nta nzira zo ku kibuga zihari ubu",
+    "intracityRides": "Ingendo mu mujyi",
+    "noIntracityServices": "Nta serivisi z'urugendo mu mujyi zihari ubu",
+    "intercityRides": "Ingendo hagati y'imijyi",
+    "noIntercityRoutes": "Nta nzira hagati y'imijyi zihari ubu",
+    "bookRide": "Fata urugendo",
+    "couldNotLoadVehicles": "Ntitwabashije kubona imodoka.",
+    "noRentalVehicles": "Nta modoka zo gukodesha zihari ubu",
+    "driverIncluded": "✓ Umushoferi arimo",
+    "selfDrive": "Kwiyoborera",
+    "rentNow": "Kodesha ubu",
+    "moreFeatures": "+{{count}} ibindi"
+  },
+  "checkout": {
+    "title": "Kwishyura",
+    "backToCart": "Subira ku gatebo",
+    "emptyCart": "Agatebo karimo ubusa",
+    "emptyCartDesc": "Ongeramo ibintu mu gatebo mbere yo kwishyura.",
+    "backToTripCart": "Subira ku gatebo k'urugendo",
+    "steps": { "details": "Ibisobanuro", "payment": "Kwishyura", "confirm": "Kwemeza" },
+    "contact": { "title": "Amakuru y'umuntu", "subtitle": "Tuzayakoresha mu kwemeza", "quickPay": "Ishyura vuba", "fullName": "Amazina yose *", "email": "Imeri *", "specialRequests": "Ibisabwa byihariye (Ntibikenewe)", "specialRequestsPlaceholder": "Ibisabwa cyangwa ibitekerezo byihariye...", "continue": "Komeza ku kwishyura" },
+    "payment": { "title": "Hitamo uburyo bwo kwishyura", "subtitle": "Hitamo umukoresha wa mobile money", "card": "Ikarita", "cardDesc": "Visa, Mastercard", "bankTransfer": "Kohereza ku banki", "bankTransferDesc": "Kohereza kuzigufi", "phoneNumber": "Nomero ya telefone *", "howItWorks": "Uko bikora", "reviewBooking": "Suzuma ibyo wafashe" },
+    "review": { "title": "Suzuma kandi wemeze", "subtitle": "Suzuma ibyo watumije mbere yo kwishyura", "contactDetails": "Amakuru y'umuntu", "paymentMethod": "Uburyo bwo kwishyura", "beforeProceed": "Mbere yo gukomeza", "agreeTerms": "Nasomye kandi nemeye", "termsConditions": "Amategeko n'amabwiriza", "privacyPolicy": "Politiki y'ibanga", "cancellationPolicy": "Politiki yo guhagarika no gusubizwa amafaranga", "acceptAll": "Emera amategeko yose kugira ngo ukomeze kwishyura", "securedEncrypted": "Byizewe • Kwishyura gushyizweho umubare", "pay": "Ishyura {{amount}}", "confirmBooking": "Emeza ibyo wafashe" },
+    "summary": { "title": "Incamake y'ibyo wafashe", "discountCode": "Kode y'igabanuka", "enterCode": "Andika kode", "stayDiscount": "Igabanuka ry'icumbi", "promo": "Promo ({{code}})", "instantConfirmation": "Kwemezwa byihuse" }
+  },
+  "tripCartPage": {
+    "title": "Urugendo rwawe",
+    "emptyTitle": "Agatebo karimo ubusa",
+    "emptyDesc": "Tangira gushakisha ingendo, amacumbi, n'ubwikorezi kugira ngo utegure urugendo rwawe.",
+    "exploreTours": "Reba ingendo",
+    "findStays": "Shaka icumbi",
+    "bookTransport": "Fata ubwikorezi",
+    "bookingSummary": "Incamake y'ibyo wafashe",
+    "proceedPayment": "Komeza kwishyura",
+    "clearCart": "Kura byose mu gatebo",
+    "editDates": "Hindura amatariki",
+    "addDates": "Ongeramo amatariki kugira ngo ukomeze",
+    "saveDates": "Bika amatariki",
+    "checkIn": "Kwinjira",
+    "checkOut": "Gusohoka"  }
 }
