--- a/src/i18n/locales/sw.json
+++ b/src/i18n/locales/sw.json
@@ -47,10 +47,42 @@
     "couldNotLoadProperties": "Imeshindikana kupakia malazi kwa sasa.",
     "noPublishedProperties": "Bado hakuna malazi yaliyochapishwa.",
     "perNight": "/ usiku",
+    "perPerson": "/ mtu",
+    "perDay": "/ siku",
+    "perWeek": "/ wiki",
+    "perMonth": "/ mwezi",
     "previous": "Iliyotangulia",
     "next": "Inayofuata",
     "showing": "Inaonyesha",
-    "of": "kati ya"
+    "of": "kati ya",
+    "back": "Rudi",
+    "book": "Weka nafasi",
+    "bookNow": "Weka nafasi sasa",
+    "addToCart": "Ongeza kwenye kikapu",
+    "addToTripCart": "Ongeza kwenye kikapu cha safari",
+    "addedToCart": "Imeongezwa kwenye kikapu cha safari",
+    "verified": "Imethibitishwa",
+    "day": "siku",
+    "days": "siku",
+    "night": "usiku",
+    "nights": "usiku",
+    "guest": "mgeni",
+    "guests_count": "wageni",
+    "seats": "viti",
+    "reviews": "maoni",
+    "total": "Jumla",
+    "subtotal": "Jumla ndogo",
+    "basePrice": "Bei ya msingi",
+    "serviceFees": "Ada za huduma",
+    "apply": "Tumia",
+    "remove": "Ondoa",
+    "edit": "Hariri",
+    "view": "Tazama",
+    "download": "Pakua",
+    "save": "Hifadhi",
+    "processing": "Inashughulikiwa...",
+    "securePayment": "Malipo salama",
+    "secureCheckout": "Malipo salama"
   },
   "favorites": {
     "title": "Zilizohifadhiwa",
@@ -216,5 +248,99 @@
     "privacyBody": "Taarifa za faragha zitachapishwa hivi karibuni.",
     "cookiesBody": "Taarifa na mapendeleo ya vidakuzi vitapatikana hivi karibuni.",
     "termsBody": "Masharti na vigezo vitachapishwa hivi karibuni."
+  },
+  "tours": {
+    "title": "Ziara & Uzoefu",
+    "subtitle": "Gundua uzuri wa Rwanda",
+    "searchPlaceholder": "Tafuta ziara kwa jina au eneo...",
+    "loading": "Inapakia ziara...",
+    "errorLoading": "Imeshindikana kupakia ziara kwa sasa.",
+    "noResults": "Hakuna ziara zinazolingana na utafutaji wako.",
+    "categories": { "all": "Zote", "nature": "Mazingira", "adventure": "Matukio", "cultural": "Utamaduni", "wildlife": "Wanyamapori", "historical": "Historia" },
+    "duration": { "any": "Muda wowote", "halfDay": "Nusu siku", "fullDay": "Siku nzima", "multiDay": "Siku nyingi" },
+    "badge": { "package": "Pakiti", "tour": "Ziara" },
+    "toast": { "addedTitle": "Imeongezwa kwenye kikapu", "packageAdded": "Pakiti imeongezwa kwenye kikapu chako.", "tourAdded": "Ziara imeongezwa kwenye kikapu chako." }
+  },
+  "tourDetails": {
+    "notFound": "Ziara haijapatikana",
+    "backToTours": "Rudi kwenye ziara",
+    "locationNotSpecified": "Eneo halijabainishwa",
+    "upToGuests": "Hadi wageni {{count}}",
+    "aboutTour": "Kuhusu ziara hii",
+    "noDescription": "Hakuna maelezo yaliyopatikana",
+    "dailyItinerary": "Ratiba ya kila siku",
+    "whatToExpect": "Nini cha kutarajia",
+    "whatsIncluded": "✓ Nini kinajumuishwa",
+    "whatsNotIncluded": "✗ Nini hakijumuishwi",
+    "importantInfo": "Taarifa muhimu",
+    "meetingPoint": "Sehemu ya kukutana",
+    "whatToBring": "Nini cha kuleta",
+    "detailedItinerary": "Ratiba ya kina",
+    "tourItinerary": "Ratiba ya ziara",
+    "pdfDocument": "Hati ya PDF",
+    "noItinerary": "Hakuna ratiba ya kina inayopatikana kwa sasa kwa ziara hii.",
+    "priceForTour": "Bei ya ziara",
+    "singlePerson": "Mtu mmoja",
+    "groupOf": "Kundi la watu {{count}}",
+    "perPerson": "kwa mtu",
+    "yourTourGuide": "Mwongozaji wako",
+    "guideIncomplete": "Wasifu wa mwongozaji haujakamilika",
+    "guideIncompleteDesc": "Taarifa za mwongozaji hazijakamilika.",
+    "yearsExperience": "miaka ya uzoefu",
+    "speaks": "Anazungumza",
+    "contactAfterBooking": "Maelezo ya mawasiliano yatapatikana baada ya kuthibitisha",
+    "cancellationTitle": "Sera ya kufuta na kurejesha pesa"
+  },
+  "transport": {
+    "title": "Huduma za usafiri",
+    "subtitle": "Safiri Rwanda kwa urahisi",
+    "searchPlaceholder": "Tafuta njia au maeneo...",
+    "loading": "Inapakia huduma za usafiri...",
+    "showAll": "Onyesha huduma zote",
+    "categories": { "airportTransfer": "Uhamisho wa uwanja wa ndege", "airportDesc": "Kuchukua na kupeleka kwenye uwanja", "intracity": "Safari ya mjini", "intracityDesc": "Kusafiri ndani ya mji", "intercity": "Safari ya miji", "intercityDesc": "Kusafiri kati ya miji", "carRental": "Kukodisha gari", "carRentalDesc": "Kodisha na au bila dereva" },
+    "vehicles": { "all": "Magari yote", "sedan": "Sedan", "suv": "SUV", "van": "Van", "fourByFour": "4x4", "luxury": "Ya kifahari" },
+    "airportTransfers": "Uhamisho wa uwanja wa ndege",
+    "fromAirport": "Kutoka uwanja wa ndege",
+    "toAirport": "Kwenda uwanja wa ndege",
+    "noAirportRoutes": "Bado hakuna njia za uwanja wa ndege",
+    "intracityRides": "Safari za mjini",
+    "noIntracityServices": "Bado hakuna huduma za safari za mjini",
+    "intercityRides": "Safari za miji",
+    "noIntercityRoutes": "Bado hakuna njia za miji",
+    "bookRide": "Weka nafasi",
+    "couldNotLoadVehicles": "Imeshindikana kupakia magari.",
+    "noRentalVehicles": "Bado hakuna magari ya kukodisha",
+    "driverIncluded": "✓ Dereva amejumuishwa",
+    "selfDrive": "Kuendesha mwenyewe",
+    "rentNow": "Kodisha sasa",
+    "moreFeatures": "+{{count}} zaidi"
+  },
+  "checkout": {
+    "title": "Malipo",
+    "backToCart": "Rudi kwenye kikapu",
+    "emptyCart": "Kikapu chako kiko tupu",
+    "emptyCartDesc": "Ongeza vitu kwenye kikapu chako kabla ya kulipa.",
+    "backToTripCart": "Rudi kwenye kikapu cha safari",
+    "steps": { "details": "Maelezo", "payment": "Malipo", "confirm": "Thibitisha" },
+    "contact": { "title": "Maelezo ya mawasiliano", "subtitle": "Tutatumia haya kuthibitisha uhifadhi wako", "quickPay": "Lipa haraka", "fullName": "Jina kamili *", "email": "Barua pepe *", "specialRequests": "Maombi maalum (Hiari)", "specialRequestsPlaceholder": "Maombi au maelezo maalum...", "continue": "Endelea na malipo" },
+    "payment": { "title": "Chagua njia ya malipo", "subtitle": "Chagua mtoa huduma wa mobile money", "card": "Kadi", "cardDesc": "Visa, Mastercard", "bankTransfer": "Uhamisho wa benki", "bankTransferDesc": "Uhamisho wa moja kwa moja", "phoneNumber": "Nambari ya simu *", "howItWorks": "Inafanyaje kazi", "reviewBooking": "Kagua uhifadhi" },
+    "review": { "title": "Kagua na uthibitishe", "subtitle": "Tafadhali kagua agizo lako kabla ya malipo", "contactDetails": "Maelezo ya mawasiliano", "paymentMethod": "Njia ya malipo", "beforeProceed": "Kabla ya kuendelea", "agreeTerms": "Nimesoma na nimekubaliana na", "termsConditions": "Masharti na Vigezo", "privacyPolicy": "Sera ya Faragha", "cancellationPolicy": "Sera ya kufuta na kurejesha pesa", "acceptAll": "Tafadhali kubali masharti yote ili kuendelea na malipo", "securedEncrypted": "Inalindwa • Malipo yaliyosimbwa", "pay": "Lipa {{amount}}", "confirmBooking": "Thibitisha uhifadhi" },
+    "summary": { "title": "Muhtasari wa uhifadhi", "discountCode": "Msimbo wa punguzo", "enterCode": "Weka msimbo", "stayDiscount": "Punguzo la kukaa", "promo": "Promo ({{code}})", "instantConfirmation": "Uthibitisho wa papo hapo" }
+  },
+  "tripCartPage": {
+    "title": "Safari yako",
+    "emptyTitle": "Kikapu chako kiko tupu",
+    "emptyDesc": "Anza kuchunguza ziara, malazi, na usafiri ili kupanga safari yako.",
+    "exploreTours": "Chunguza ziara",
+    "findStays": "Tafuta malazi",
+    "bookTransport": "Weka nafasi ya usafiri",
+    "bookingSummary": "Muhtasari wa uhifadhi",
+    "proceedPayment": "Endelea na malipo",
+    "clearCart": "Futa kikapu",
+    "editDates": "Hariri tarehe",
+    "addDates": "Ongeza tarehe ili kuendelea",
+    "saveDates": "Hifadhi tarehe",
+    "checkIn": "Kuingia",
+    "checkOut": "Kutoka"
   }
 }
