--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -47,10 +47,42 @@
     "couldNotLoadProperties": "暂时无法加载住宿。",
     "noPublishedProperties": "暂时没有已发布的住宿。",
     "perNight": "/ 晚",
+    "perPerson": "/ 人",
+    "perDay": "/ 天",
+    "perWeek": "/ 周",
+    "perMonth": "/ 月",
     "previous": "上一页",
     "next": "下一页",
     "showing": "显示",
-    "of": "/"
+    "of": "/",
+    "back": "返回",
+    "book": "预订",
+    "bookNow": "立即预订",
+    "addToCart": "加入购物车",
+    "addToTripCart": "加入行程购物车",
+    "addedToCart": "已加入行程购物车",
+    "verified": "已验证",
+    "day": "天",
+    "days": "天",
+    "night": "晚",
+    "nights": "晚",
+    "guest": "客人",
+    "guests_count": "客人",
+    "seats": "座位",
+    "reviews": "评价",
+    "total": "总计",
+    "subtotal": "小计",
+    "basePrice": "基础价格",
+    "serviceFees": "服务费",
+    "apply": "应用",
+    "remove": "移除",
+    "edit": "编辑",
+    "view": "查看",
+    "download": "下载",
+    "save": "保存",
+    "processing": "处理中...",
+    "securePayment": "安全支付",
+    "secureCheckout": "安全结账"
   },
   "favorites": {
     "title": "已保存",
@@ -216,5 +248,99 @@
     "privacyBody": "隐私相关信息将很快在此发布。",
     "cookiesBody": "Cookie 信息与偏好设置将很快在此提供。",
     "termsBody": "条款与条件将很快在此发布。"
+  },
+  "tours": {
+    "title": "旅游与体验",
+    "subtitle": "发现卢旺达之美",
+    "searchPlaceholder": "按名称或地点搜索旅游...",
+    "loading": "正在加载旅游...",
+    "errorLoading": "暂时无法加载旅游。",
+    "noResults": "没有找到符合搜索条件的旅游。",
+    "categories": { "all": "全部", "nature": "自然", "adventure": "冒险", "cultural": "文化", "wildlife": "野生动物", "historical": "历史" },
+    "duration": { "any": "任意时长", "halfDay": "半天", "fullDay": "全天", "multiDay": "多日" },
+    "badge": { "package": "套餐", "tour": "旅游" },
+    "toast": { "addedTitle": "已加入行程购物车", "packageAdded": "套餐已加入购物车。", "tourAdded": "旅游已加入购物车。" }
+  },
+  "tourDetails": {
+    "notFound": "未找到旅游",
+    "backToTours": "返回旅游列表",
+    "locationNotSpecified": "未指定地点",
+    "upToGuests": "最多 {{count}} 位客人",
+    "aboutTour": "关于此旅游",
+    "noDescription": "暂无描述",
+    "dailyItinerary": "每日行程",
+    "whatToExpect": "期望内容",
+    "whatsIncluded": "✓ 包含项目",
+    "whatsNotIncluded": "✗ 不包含项目",
+    "importantInfo": "重要信息",
+    "meetingPoint": "集合地点",
+    "whatToBring": "需要携带",
+    "detailedItinerary": "详细行程",
+    "tourItinerary": "旅游行程",
+    "pdfDocument": "PDF 文档",
+    "noItinerary": "该旅游目前没有详细的行程文档。",
+    "priceForTour": "旅游价格",
+    "singlePerson": "单人",
+    "groupOf": "{{count}} 人团",
+    "perPerson": "每人",
+    "yourTourGuide": "您的导游",
+    "guideIncomplete": "导游资料不完整",
+    "guideIncompleteDesc": "导游的个人资料信息不完整。",
+    "yearsExperience": "年经验",
+    "speaks": "会说",
+    "contactAfterBooking": "预订确认后提供联系方式",
+    "cancellationTitle": "取消与退款政策"
+  },
+  "transport": {
+    "title": "交通服务",
+    "subtitle": "轻松出行卢旺达",
+    "searchPlaceholder": "搜索路线或目的地...",
+    "loading": "正在加载交通服务...",
+    "showAll": "显示所有服务",
+    "categories": { "airportTransfer": "机场接送", "airportDesc": "机场接送服务", "intracity": "市内出行", "intracityDesc": "城市内出行", "intercity": "城际出行", "intercityDesc": "城市间旅行", "carRental": "租车", "carRentalDesc": "带或不带司机租车" },
+    "vehicles": { "all": "所有车辆", "sedan": "轿车", "suv": "SUV", "van": "面包车", "fourByFour": "四驱车", "luxury": "豪华" },
+    "airportTransfers": "机场接送",
+    "fromAirport": "从机场出发",
+    "toAirport": "前往机场",
+    "noAirportRoutes": "暂无机场接送路线",
+    "intracityRides": "市内出行",
+    "noIntracityServices": "暂无市内出行服务",
+    "intercityRides": "城际出行",
+    "noIntercityRoutes": "暂无城际路线",
+    "bookRide": "预订出行",
+    "couldNotLoadVehicles": "无法加载车辆信息。",
+    "noRentalVehicles": "暂无可租车辆",
+    "driverIncluded": "✓ 含司机",
+    "selfDrive": "自驾",
+    "rentNow": "立即租车",
+    "moreFeatures": "+{{count}} 更多"
+  },
+  "checkout": {
+    "title": "结账",
+    "backToCart": "返回购物车",
+    "emptyCart": "购物车为空",
+    "emptyCartDesc": "请先将项目添加到购物车。",
+    "backToTripCart": "返回行程购物车",
+    "steps": { "details": "详情", "payment": "支付", "confirm": "确认" },
+    "contact": { "title": "联系信息", "subtitle": "我们将用此信息确认您的预订", "quickPay": "快捷支付", "fullName": "全名 *", "email": "邮箱 *", "specialRequests": "特殊要求（可选）", "specialRequestsPlaceholder": "特殊要求或备注...", "continue": "继续付款" },
+    "payment": { "title": "选择支付方式", "subtitle": "选择您的移动支付提供商", "card": "银行卡", "cardDesc": "Visa, Mastercard", "bankTransfer": "银行转账", "bankTransferDesc": "直接转账", "phoneNumber": "手机号码 *", "howItWorks": "如何操作", "reviewBooking": "审核预订" },
+    "review": { "title": "审核并确认", "subtitle": "请在付款前检查您的订单", "contactDetails": "联系信息", "paymentMethod": "支付方式", "beforeProceed": "继续之前", "agreeTerms": "我已阅读并同意", "termsConditions": "条款和条件", "privacyPolicy": "隐私政策", "cancellationPolicy": "取消与退款政策", "acceptAll": "请接受所有条款以继续付款", "securedEncrypted": "安全 • 加密支付", "pay": "支付 {{amount}}", "confirmBooking": "确认预订" },
+    "summary": { "title": "预订摘要", "discountCode": "折扣码", "enterCode": "输入代码", "stayDiscount": "住宿折扣", "promo": "优惠 ({{code}})", "instantConfirmation": "即时预订确认" }
+  },
+  "tripCartPage": {
+    "title": "您的行程",
+    "emptyTitle": "购物车为空",
+    "emptyDesc": "开始探索精彩的旅游、住宿和交通选项来规划您的完美行程。",
+    "exploreTours": "探索旅游",
+    "findStays": "查找住宿",
+    "bookTransport": "预订交通",
+    "bookingSummary": "预订摘要",
+    "proceedPayment": "前往付款",
+    "clearCart": "清空购物车",
+    "editDates": "编辑日期",
+    "addDates": "添加日期以继续",
+    "saveDates": "保存日期",
+    "checkIn": "入住",
+    "checkOut": "退房"
   }
 }
